Atualizar o delivery.html

--- a/delivery.html
+++ b/delivery.html
@@ -3,280 +3,152 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Relatório de Transporte - Premium 3D</title>
+  <title>Dash3D - Multi Dashboards</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.min.js"></script>
   <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-      margin: 0; padding: 0;
-      background: linear-gradient(135deg, #141e30, #243b55);
-      color: #fff;
-    }
-    h1, h2 { text-align: center; margin-bottom: 15px; }
-    .container { max-width: 1200px; margin: auto; padding: 20px; }
-    .card {
-      background: rgba(255,255,255,0.08);
-      border-radius: 15px;
-      padding: 20px;
-      margin: 20px 0;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.6);
-      backdrop-filter: blur(15px);
-      transform: perspective(1000px) rotateX(2deg);
-    }
-    label { display: block; margin-top: 10px; font-weight: bold; }
-    input, button {
-      width: 100%; padding: 12px; margin-top: 5px;
-      border: none; border-radius: 8px;
-      font-size: 14px;
-    }
-    input { background: rgba(255,255,255,0.1); color: #fff; }
-    button {
-      background: linear-gradient(90deg, #3498db, #9b59b6);
-      color: white; cursor: pointer; font-weight: bold;
-      transition: transform .2s ease, box-shadow .2s;
-    }
-    button:hover {
-      transform: translateY(-2px) scale(1.05);
-      box-shadow: 0 6px 20px rgba(0,0,0,0.5);
-    }
-    .tabs {
-      display: flex; justify-content: space-around;
-      position: fixed; bottom: 0; left: 0; width: 100%;
-      background: rgba(0,0,0,0.9); padding: 10px 0;
-      border-top: 1px solid rgba(255,255,255,0.1);
-    }
-    .tab-btn {
-      flex: 1; text-align: center; color: #fff;
-      background: none; border: none; font-size: 16px; cursor: pointer;
-    }
-    .tab-btn.active { color: #00ffcc; text-shadow: 0 0 10px #00ffcc; }
-    .tab-content { display: none; padding-bottom: 70px; }
-    .tab-content.active { display: block; animation: fadeIn .5s; }
-    @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
-    .kpi-cards {
-      display: grid; grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
-      gap: 15px; margin-bottom: 20px;
-    }
-    .kpi {
-      background: linear-gradient(135deg, #1f1c2c, #928dab);
-      padding: 15px; border-radius: 12px; text-align: center;
-      box-shadow: inset 0 0 10px rgba(0,0,0,0.6), 0 6px 15px rgba(0,0,0,0.4);
-      transform: perspective(600px) rotateY(3deg);
-    }
-    .kpi h3 { margin: 0; font-size: 22px; color: #00ffcc; text-shadow: 0 0 6px #00ffcc; }
-    .preview { display: flex; gap: 10px; flex-wrap: wrap; margin-top: 15px; }
-    #assinaturaCanvas {
-      border: 2px dashed #00ffcc; border-radius: 10px;
-      width: 100%; height: 200px; background: #fff; cursor: crosshair;
-    }
-    .checkin-list { list-style: none; padding: 0; }
-    .checkin-list li {
-      padding: 8px; margin: 5px 0;
-      border-radius: 8px;
-      background: rgba(0,255,204,0.15);
-      box-shadow: inset 0 0 8px rgba(0,255,204,0.3);
-    }
-    /* Impressão */
-    @media print {
-      body { background: #fff; color: #000; }
-      .tabs, button { display: none !important; }
-      .card { box-shadow: none; background: #fff; color: #000; }
-      #assinaturaCanvas { border: 1px solid #000; }
-    }
+    body { margin:0; font-family:'Poppins',sans-serif; background:#0f0f0f; color:#eee; }
+    header { background:linear-gradient(90deg,#6a1b9a,#8e24aa,#d81b60); color:white; padding:20px; text-align:center; font-size:24px; font-weight:700; box-shadow:0 4px 12px rgba(0,0,0,.4); }
+    main { display:grid; grid-template-columns:1fr 2fr; gap:20px; padding:20px; max-width:1400px; margin:auto; }
+    form { background:#1e1e2f; padding:20px; border-radius:12px; box-shadow:0 4px 12px rgba(0,0,0,.4); margin-bottom:20px; }
+    h3 { margin-top:0; color:#ffb74d; }
+    label { font-weight:600; margin-top:10px; display:block; }
+    input, select { width:100%; padding:10px; margin:6px 0; border:none; border-radius:6px; font-size:15px; background:#2c2c3c; color:white; }
+    button { background:#8e24aa; color:white; border:none; padding:12px; width:100%; border-radius:8px; font-size:16px; cursor:pointer; margin-top:10px; font-weight:600; }
+    button:hover { background:#d81b60; }
+    .dashboard { background:#1e1e2f; padding:20px; border-radius:12px; box-shadow:0 4px 12px rgba(0,0,0,.4); }
+    canvas { background:#121212; border-radius:12px; margin-top:15px; }
+    .actions { display:flex; gap:10px; margin-top:15px; flex-wrap:wrap; }
   </style>
 </head>
 <body>
+  <header>📊 Dash3D — Multi Dashboards</header>
 
-<div class="container">
-  <h1>📋 Relatório de Transporte - Premium 3D</h1>
+  <main>
+    <!-- Formulário -->
+    <form id="dataForm">
+      <h3>Adicionar Registro</h3>
+      <label>Escolha o Dashboard</label>
+      <select id="tipo">
+        <option value="financeiro">💰 Financeiro</option>
+        <option value="vendas">🛒 Vendas</option>
+        <option value="estoque">📦 Estoque</option>
+        <option value="marketing">📱 Marketing</option>
+      </select>
 
-  <!-- Formulário -->
-  <div id="form" class="tab-content active card">
-    <h2>📝 Preenchimento</h2>
-    <form id="relatorioForm">
-      <label><i class="fa fa-user"></i> Funcionário:</label>
-      <input type="text" id="funcionario" required>
-      <label><i class="fa fa-calendar"></i> Data:</label>
-      <input type="date" id="data" required>
-      <label><i class="fa fa-utensils"></i> Refeição (R$):</label>
-      <input type="number" id="refeicao" required>
-      <label><i class="fa fa-bus"></i> Condução (R$):</label>
-      <input type="number" id="conducao" required>
-      <label><i class="fa fa-home"></i> Retorno Casa (R$):</label>
-      <input type="number" id="retorno" required>
-      <label><i class="fa fa-map-marker-alt"></i> Adicionar Ponto de Check-in:</label>
-      <input type="text" id="ponto" placeholder="Ex: Cliente A">
-      <button type="button" onclick="adicionarCheckin()">Adicionar Check-in</button>
-      <ul id="listaCheckin" class="checkin-list"></ul>
-      <label><i class="fa fa-signature"></i> Assinatura Digital:</label>
-      <canvas id="assinaturaCanvas"></canvas>
-      <button type="button" onclick="limparAssinatura()">🧹 Limpar Assinatura</button>
-      <button type="submit">Salvar Relatório</button>
-      <button type="button" onclick="imprimirRelatorio()">🖨️ Imprimir Relatório</button>
+      <label>Categoria</label>
+      <input type="text" id="categoria" placeholder="Ex: Receita, Produto, Campanha" required>
+
+      <label>Valor</label>
+      <input type="number" id="valor" placeholder="Digite um valor" required>
+
+      <button type="submit">Salvar</button>
     </form>
-  </div>
 
-  <!-- Dashboard -->
-  <div id="dashboard" class="tab-content card">
-    <h2>📊 Dashboard 3D</h2>
-    <div class="kpi-cards">
-      <div class="kpi"><h3 id="kpiTotal">R$0</h3><p>Total Geral</p></div>
-      <div class="kpi"><h3 id="kpiRefeicao">R$0</h3><p>Total Refeições</p></div>
-      <div class="kpi"><h3 id="kpiConducao">R$0</h3><p>Total Conduções</p></div>
-      <div class="kpi"><h3 id="kpiRetorno">R$0</h3><p>Total Retornos</p></div>
+    <!-- Dashboard -->
+    <div class="dashboard">
+      <h3 id="tituloDash">Dashboard em Tempo Real</h3>
+      <canvas id="chart2d" height="150"></canvas>
+      <canvas id="chart3d" height="300"></canvas>
+
+      <div class="actions">
+        <button onclick="exportarCSV()">⬇️ Exportar CSV</button>
+        <button onclick="limparDados()">🗑️ Limpar Dados</button>
+      </div>
     </div>
-    <canvas id="barChart"></canvas>
-    <canvas id="pieChart"></canvas>
-    <canvas id="lineChart"></canvas>
-  </div>
-</div>
+  </main>
 
-<!-- Menu -->
-<div class="tabs">
-  <button class="tab-btn active" data-tab="form"><i class="fa fa-clipboard"></i><br>Relatório</button>
-  <button class="tab-btn" data-tab="dashboard"><i class="fa fa-chart-line"></i><br>Dashboard</button>
-</div>
+  <script>
+    // Dados por tipo de dashboard
+    let registros = JSON.parse(localStorage.getItem("dash3D_multi")) || {
+      financeiro:[], vendas:[], estoque:[], marketing:[]
+    };
+    let tipoAtual = "financeiro";
 
-<script>
-  let registros = JSON.parse(localStorage.getItem("registros")) || [];
-  let checkins = [];
-  const form = document.getElementById("relatorioForm");
-
-  // ==== Charts ====
-  const barCtx = document.getElementById("barChart").getContext("2d");
-  const pieCtx = document.getElementById("pieChart").getContext("2d");
-  const lineCtx = document.getElementById("lineChart").getContext("2d");
-
-  let barChart = new Chart(barCtx, { type: "bar", data: { labels: [], datasets: [] },
-    options: { plugins: { legend: { labels: { color: "#fff" } } },
-    scales: { x: { ticks: { color: "#fff" } }, y: { ticks: { color: "#fff" } } } }
-  });
-  let pieChart = new Chart(pieCtx, { type: "doughnut", data: { labels: ["Refeição", "Condução", "Retorno"], datasets: [{ data: [0,0,0], backgroundColor: ["#3498db","#2ecc71","#e74c3c"], borderWidth: 3 }] },
-    options: { plugins: { legend: { labels: { color: "#fff" } } } }
-  });
-  let lineChart = new Chart(lineCtx, { type: "line", data: { labels: [], datasets: [{ label: "Total Diário", data: [], borderColor: "#00ffcc", backgroundColor: "#00ffcc55", fill: true, tension: 0.4 }] },
-    options: { plugins: { legend: { labels: { color: "#fff" } } },
-    scales: { x: { ticks: { color: "#fff" } }, y: { ticks: { color: "#fff" } } } }
-  });
-
-  function atualizarDashboard() {
-    const totalRefeicao = registros.reduce((s,r)=>s+r.refeicao,0);
-    const totalConducao = registros.reduce((s,r)=>s+r.conducao,0);
-    const totalRetorno = registros.reduce((s,r)=>s+r.retorno,0);
-    const totalGeral = totalRefeicao + totalConducao + totalRetorno;
-
-    document.getElementById("kpiTotal").textContent = "R$"+totalGeral;
-    document.getElementById("kpiRefeicao").textContent = "R$"+totalRefeicao;
-    document.getElementById("kpiConducao").textContent = "R$"+totalConducao;
-    document.getElementById("kpiRetorno").textContent = "R$"+totalRetorno;
-
-    const funcionarios = [...new Set(registros.map(r => r.funcionario))];
-    const refeicoes = funcionarios.map(f => registros.filter(r => r.funcionario===f).reduce((s,r)=>s+r.refeicao,0));
-    const conducoes = funcionarios.map(f => registros.filter(r => r.funcionario===f).reduce((s,r)=>s+r.conducao,0));
-    const retornos = funcionarios.map(f => registros.filter(r => r.funcionario===f).reduce((s,r)=>s+r.retorno,0));
-
-    barChart.data = { labels: funcionarios, datasets: [
-      { label: "Refeição", data: refeicoes, backgroundColor: "#3498db" },
-      { label: "Condução", data: conducoes, backgroundColor: "#2ecc71" },
-      { label: "Retorno", data: retornos, backgroundColor: "#e74c3c" }
-    ]};
-    barChart.update();
-
-    pieChart.data.datasets[0].data = [totalRefeicao, totalConducao, totalRetorno];
-    pieChart.update();
-
-    const datas = [...new Set(registros.map(r=>r.data))].sort();
-    const totais = datas.map(d => registros.filter(r=>r.data===d).reduce((s,r)=>s+r.total,0));
-
-    lineChart.data.labels = datas;
-    lineChart.data.datasets[0].data = totais;
-    lineChart.update();
-  }
-
-  // ==== Check-in ====
-  function adicionarCheckin(){
-    const ponto = document.getElementById("ponto").value;
-    if(!ponto) return alert("Informe o ponto!");
-    const timestamp = new Date().toLocaleTimeString();
-    checkins.push({ ponto, hora: timestamp });
-    const li = document.createElement("li");
-    li.textContent = "✔️ " + ponto + " - " + timestamp;
-    document.getElementById("listaCheckin").appendChild(li);
-    document.getElementById("ponto").value = "";
-  }
-
-  // ==== Assinatura Digital ====
-  const canvas = document.getElementById("assinaturaCanvas");
-  const ctx = canvas.getContext("2d");
-  let desenhando = false;
-
-  canvas.addEventListener("mousedown", ()=>desenhando=true);
-  canvas.addEventListener("mouseup", ()=>desenhando=false);
-  canvas.addEventListener("mousemove", desenhar);
-  canvas.addEventListener("touchstart", ()=>desenhando=true);
-  canvas.addEventListener("touchend", ()=>desenhando=false);
-  canvas.addEventListener("touchmove", desenharTouch);
-
-  function desenhar(e){
-    if(!desenhando) return;
-    ctx.fillStyle = "#000";
-    ctx.beginPath();
-    ctx.arc(e.offsetX, e.offsetY, 2, 0, 2*Math.PI);
-    ctx.fill();
-  }
-  function desenharTouch(e){
-    if(!desenhando) return;
-    const rect = canvas.getBoundingClientRect();
-    const x = e.touches[0].clientX - rect.left;
-    const y = e.touches[0].clientY - rect.top;
-    ctx.fillStyle = "#000";
-    ctx.beginPath();
-    ctx.arc(x, y, 2, 0, 2*Math.PI);
-    ctx.fill();
-  }
-  function limparAssinatura(){
-    ctx.clearRect(0,0,canvas.width,canvas.height);
-  }
-
-  // ==== Salvar relatório ====
-  form.addEventListener("submit", (e) => {
-    e.preventDefault();
-    const funcionario = document.getElementById("funcionario").value;
-    const data = document.getElementById("data").value;
-    const refeicao = parseFloat(document.getElementById("refeicao").value);
-    const conducao = parseFloat(document.getElementById("conducao").value);
-    const retorno = parseFloat(document.getElementById("retorno").value);
-    const total = refeicao + conducao + retorno;
-    const assinatura = canvas.toDataURL();
-
-    registros.push({ funcionario, data, refeicao, conducao, retorno, total, checkins, assinatura });
-    localStorage.setItem("registros", JSON.stringify(registros));
-    atualizarDashboard();
-    alert("Relatório salvo com sucesso!");
-
-    form.reset();
-    limparAssinatura();
-    checkins = [];
-    document.getElementById("listaCheckin").innerHTML = "";
-  });
-
-  // ==== Imprimir ====
-  function imprimirRelatorio(){
-    window.print();
-  }
-
-  atualizarDashboard();
-
-  // ==== Tabs ====
-  document.querySelectorAll(".tab-btn").forEach(btn=>{
-    btn.addEventListener("click",()=>{
-      document.querySelectorAll(".tab-btn").forEach(b=>b.classList.remove("active"));
-      document.querySelectorAll(".tab-content").forEach(c=>c.classList.remove("active"));
-      btn.classList.add("active");
-      document.getElementById(btn.dataset.tab).classList.add("active");
+    const ctx2d = document.getElementById('chart2d').getContext('2d');
+    let chart2d = new Chart(ctx2d, {
+      type: 'bar',
+      data: { labels: [], datasets: [{ label:'Valores', data:[], backgroundColor:['#8e24aa','#d81b60','#ffb74d','#29b6f6','#43a047'] }] },
+      options: { responsive:true, plugins:{ legend:{labels:{color:'white'}}}, scales:{ x:{ticks:{color:'white'}}, y:{ticks:{color:'white'}} } }
     });
-  });
-</script>
+
+    // Gráfico 3D fake
+    const canvas3d = document.getElementById('chart3d');
+    const renderer = new THREE.WebGLRenderer({ canvas: canvas3d });
+    renderer.setSize(canvas3d.clientWidth, 300);
+    const scene = new THREE.Scene();
+    const camera = new THREE.PerspectiveCamera(75, canvas3d.clientWidth/300, 0.1, 1000);
+    camera.position.z = 5;
+    const geometry = new THREE.BoxGeometry();
+    const material = new THREE.MeshPhongMaterial({ color: 0x8e24aa, shininess:100 });
+    const cube = new THREE.Mesh(geometry, material);
+    scene.add(cube);
+    const light = new THREE.PointLight(0xffffff, 1, 100);
+    light.position.set(5,5,5);
+    scene.add(light);
+
+    function animate3D(){
+      requestAnimationFrame(animate3D);
+      cube.rotation.x += 0.01;
+      cube.rotation.y += 0.01;
+      let soma = registros[tipoAtual].reduce((a,b)=>a+b.valor,0);
+      cube.scale.y = Math.max(0.5, soma/100); 
+      renderer.render(scene, camera);
+    }
+    animate3D();
+
+    // Atualizar gráficos
+    function atualizarGraficos(){
+      const dados = registros[tipoAtual];
+      chart2d.data.labels = dados.map(r=>r.categoria);
+      chart2d.data.datasets[0].data = dados.map(r=>r.valor);
+      chart2d.update();
+      document.getElementById("tituloDash").innerText = "Dashboard " + tipoAtual.charAt(0).toUpperCase()+tipoAtual.slice(1);
+    }
+
+    // Formulário
+    document.getElementById("dataForm").addEventListener("submit", (e)=>{
+      e.preventDefault();
+      tipoAtual = document.getElementById("tipo").value;
+      const categoria = document.getElementById("categoria").value;
+      const valor = parseFloat(document.getElementById("valor").value);
+
+      registros[tipoAtual].push({ categoria, valor });
+      localStorage.setItem("dash3D_multi", JSON.stringify(registros));
+
+      atualizarGraficos();
+      e.target.reset();
+    });
+
+    document.getElementById("tipo").addEventListener("change",(e)=>{
+      tipoAtual = e.target.value;
+      atualizarGraficos();
+    });
+
+    // Exportar CSV
+    function exportarCSV(){
+      const dados = registros[tipoAtual];
+      if(dados.length===0){ alert("Nenhum dado para exportar."); return; }
+      let csv = "Categoria,Valor\n";
+      dados.forEach(r=>{ csv+=`${r.categoria},${r.valor}\n`; });
+      const blob = new Blob([csv],{type:"text/csv"});
+      const link = document.createElement("a");
+      link.href = URL.createObjectURL(blob);
+      link.download = `dashboard_${tipoAtual}.csv`;
+      link.click();
+    }
+
+    // Limpar
+    function limparDados(){
+      if(confirm("Deseja limpar este dashboard?")){
+        registros[tipoAtual] = [];
+        localStorage.setItem("dash3D_multi", JSON.stringify(registros));
+        atualizarGraficos();
+      }
+    }
+
+    atualizarGraficos();
+  </script>
 </body>
 </html>
