--- a/delivery.html
+++ b/delivery.html
@@ -3,152 +3,189 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dash3D - Multi Dashboards</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <title>Planilha Inteligente - Protótipo Premium</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <style>
-    body { margin:0; font-family:'Poppins',sans-serif; background:#0f0f0f; color:#eee; }
-    header { background:linear-gradient(90deg,#6a1b9a,#8e24aa,#d81b60); color:white; padding:20px; text-align:center; font-size:24px; font-weight:700; box-shadow:0 4px 12px rgba(0,0,0,.4); }
-    main { display:grid; grid-template-columns:1fr 2fr; gap:20px; padding:20px; max-width:1400px; margin:auto; }
-    form { background:#1e1e2f; padding:20px; border-radius:12px; box-shadow:0 4px 12px rgba(0,0,0,.4); margin-bottom:20px; }
-    h3 { margin-top:0; color:#ffb74d; }
-    label { font-weight:600; margin-top:10px; display:block; }
-    input, select { width:100%; padding:10px; margin:6px 0; border:none; border-radius:6px; font-size:15px; background:#2c2c3c; color:white; }
-    button { background:#8e24aa; color:white; border:none; padding:12px; width:100%; border-radius:8px; font-size:16px; cursor:pointer; margin-top:10px; font-weight:600; }
+    body { font-family:'Poppins',sans-serif; background:#0f0f0f; color:#fff; margin:0; }
+    header { background:linear-gradient(90deg,#6a1b9a,#8e24aa,#d81b60); padding:20px; text-align:center; font-size:22px; font-weight:600; }
+    main { max-width:1300px; margin:auto; padding:20px; }
+    .sheet { background:#1e1e2f; padding:20px; border-radius:12px; box-shadow:0 4px 10px rgba(0,0,0,.4); overflow-x:auto; }
+    table { width:100%; border-collapse:collapse; margin-top:10px; }
+    th, td { border:1px solid #444; padding:8px; text-align:center; }
+    th { background:#2c2c3c; }
+    input.cell { background:transparent; border:none; color:#fff; text-align:center; width:100%; }
+    .controls { margin:15px 0; display:flex; gap:10px; flex-wrap:wrap; }
+    input, button { padding:10px; border-radius:6px; border:none; font-size:14px; }
+    input { flex:1; }
+    button { background:#8e24aa; color:#fff; cursor:pointer; }
     button:hover { background:#d81b60; }
-    .dashboard { background:#1e1e2f; padding:20px; border-radius:12px; box-shadow:0 4px 12px rgba(0,0,0,.4); }
-    canvas { background:#121212; border-radius:12px; margin-top:15px; }
-    .actions { display:flex; gap:10px; margin-top:15px; flex-wrap:wrap; }
+    .dashboards { display:grid; grid-template-columns:1fr 1fr; gap:20px; margin-top:20px; }
+    canvas { background:#121212; border-radius:12px; padding:10px; }
   </style>
 </head>
 <body>
-  <header>📊 Dash3D — Multi Dashboards</header>
-
+  <header>📊 Planilha Inteligente - Protótipo Premium</header>
   <main>
-    <!-- Formulário -->
-    <form id="dataForm">
-      <h3>Adicionar Registro</h3>
-      <label>Escolha o Dashboard</label>
-      <select id="tipo">
-        <option value="financeiro">💰 Financeiro</option>
-        <option value="vendas">🛒 Vendas</option>
-        <option value="estoque">📦 Estoque</option>
-        <option value="marketing">📱 Marketing</option>
-      </select>
+    <div class="controls">
+      <input type="text" id="novaColuna" placeholder="Digite o nome da categoria (ex: Receita)">
+      <button onclick="adicionarColuna()">➕ Adicionar Coluna</button>
+      <button onclick="exportarCSV()">⬇️ Exportar CSV</button>
+      <button onclick="exportarPDF()">📄 Exportar PDF</button>
+    </div>
 
-      <label>Categoria</label>
-      <input type="text" id="categoria" placeholder="Ex: Receita, Produto, Campanha" required>
+    <!-- Planilha -->
+    <div class="sheet">
+      <table id="tabela">
+        <thead>
+          <tr id="cabecalho">
+            <th>📅 Mês</th>
+          </tr>
+        </thead>
+        <tbody id="corpo">
+          <tr><td>Janeiro</td></tr>
+          <tr><td>Fevereiro</td></tr>
+          <tr><td>Março</td></tr>
+          <tr><td>Abril</td></tr>
+          <tr><td>Maio</td></tr>
+        </tbody>
+      </table>
+    </div>
 
-      <label>Valor</label>
-      <input type="number" id="valor" placeholder="Digite um valor" required>
-
-      <button type="submit">Salvar</button>
-    </form>
-
-    <!-- Dashboard -->
-    <div class="dashboard">
-      <h3 id="tituloDash">Dashboard em Tempo Real</h3>
-      <canvas id="chart2d" height="150"></canvas>
-      <canvas id="chart3d" height="300"></canvas>
-
-      <div class="actions">
-        <button onclick="exportarCSV()">⬇️ Exportar CSV</button>
-        <button onclick="limparDados()">🗑️ Limpar Dados</button>
-      </div>
+    <!-- Dashboards -->
+    <div class="dashboards">
+      <canvas id="graficoLinha" height="200"></canvas>
+      <canvas id="graficoBarra" height="200"></canvas>
+      <canvas id="graficoPizza" height="200"></canvas>
     </div>
   </main>
 
   <script>
-    // Dados por tipo de dashboard
-    let registros = JSON.parse(localStorage.getItem("dash3D_multi")) || {
-      financeiro:[], vendas:[], estoque:[], marketing:[]
+    let categorias = [];
+    const cabecalho = document.getElementById("cabecalho");
+    const corpo = document.getElementById("corpo");
+
+    // --- Ícones por categoria ---
+    const icones = {
+      receita: "💰",
+      despesa: "💸",
+      lucro: "📈",
+      estoque: "📦",
+      vendas: "🛒",
+      marketing: "📱",
+      cliente: "👥",
+      padrão: "📊"
     };
-    let tipoAtual = "financeiro";
 
-    const ctx2d = document.getElementById('chart2d').getContext('2d');
-    let chart2d = new Chart(ctx2d, {
-      type: 'bar',
-      data: { labels: [], datasets: [{ label:'Valores', data:[], backgroundColor:['#8e24aa','#d81b60','#ffb74d','#29b6f6','#43a047'] }] },
-      options: { responsive:true, plugins:{ legend:{labels:{color:'white'}}}, scales:{ x:{ticks:{color:'white'}}, y:{ticks:{color:'white'}} } }
-    });
+    // --- Gráficos ---
+    const ctxLinha = document.getElementById("graficoLinha").getContext("2d");
+    const ctxBarra = document.getElementById("graficoBarra").getContext("2d");
+    const ctxPizza = document.getElementById("graficoPizza").getContext("2d");
 
-    // Gráfico 3D fake
-    const canvas3d = document.getElementById('chart3d');
-    const renderer = new THREE.WebGLRenderer({ canvas: canvas3d });
-    renderer.setSize(canvas3d.clientWidth, 300);
-    const scene = new THREE.Scene();
-    const camera = new THREE.PerspectiveCamera(75, canvas3d.clientWidth/300, 0.1, 1000);
-    camera.position.z = 5;
-    const geometry = new THREE.BoxGeometry();
-    const material = new THREE.MeshPhongMaterial({ color: 0x8e24aa, shininess:100 });
-    const cube = new THREE.Mesh(geometry, material);
-    scene.add(cube);
-    const light = new THREE.PointLight(0xffffff, 1, 100);
-    light.position.set(5,5,5);
-    scene.add(light);
+    let graficoLinha = new Chart(ctxLinha, { type:'line', data:{labels:["Janeiro","Fevereiro","Março","Abril","Maio"], datasets:[]}, options:{plugins:{legend:{labels:{color:"white"}}}, scales:{x:{ticks:{color:"white"}}, y:{ticks:{color:"white"}}}}});
+    let graficoBarra = new Chart(ctxBarra, { type:'bar', data:{labels:["Janeiro","Fevereiro","Março","Abril","Maio"], datasets:[]}, options:{plugins:{legend:{labels:{color:"white"}}}, scales:{x:{ticks:{color:"white"}}, y:{ticks:{color:"white"}}}}});
+    let graficoPizza = new Chart(ctxPizza, { type:'pie', data:{labels:[], datasets:[{data:[], backgroundColor:[]}]}, options:{plugins:{legend:{labels:{color:"white"}}}}});
 
-    function animate3D(){
-      requestAnimationFrame(animate3D);
-      cube.rotation.x += 0.01;
-      cube.rotation.y += 0.01;
-      let soma = registros[tipoAtual].reduce((a,b)=>a+b.valor,0);
-      cube.scale.y = Math.max(0.5, soma/100); 
-      renderer.render(scene, camera);
+    function adicionarColuna(){
+      let nome = document.getElementById("novaColuna").value.trim();
+      if(!nome) return alert("Digite um nome válido!");
+      if(categorias.includes(nome)) return alert("Essa categoria já existe!");
+
+      categorias.push(nome);
+
+      // Detecta ícone
+      const chave = nome.toLowerCase();
+      const icone = icones[chave] || icones["padrão"];
+
+      // Cabeçalho com ícone
+      const th = document.createElement("th");
+      th.innerText = `${icone} ${nome}`;
+      cabecalho.appendChild(th);
+
+      // Células editáveis
+      for(let i=0; i<corpo.rows.length; i++){
+        const td = document.createElement("td");
+        const input = document.createElement("input");
+        input.type = "number";
+        input.className = "cell";
+        input.dataset.coluna = nome;
+        input.addEventListener("input", atualizarGraficos);
+        td.appendChild(input);
+        corpo.rows[i].appendChild(td);
+      }
+
+      // Adiciona dataset nos gráficos
+      const cor = getCor();
+      graficoLinha.data.datasets.push({ label:`${icone} ${nome}`, data:Array(corpo.rows.length).fill(0), borderColor:cor, backgroundColor:"transparent" });
+      graficoBarra.data.datasets.push({ label:`${icone} ${nome}`, data:Array(corpo.rows.length).fill(0), backgroundColor:cor });
+      graficoPizza.data.labels.push(`${icone} ${nome}`);
+      graficoPizza.data.datasets[0].data.push(0);
+      graficoPizza.data.datasets[0].backgroundColor.push(cor);
+
+      atualizarGraficos();
+      document.getElementById("novaColuna").value = "";
     }
-    animate3D();
 
-    // Atualizar gráficos
     function atualizarGraficos(){
-      const dados = registros[tipoAtual];
-      chart2d.data.labels = dados.map(r=>r.categoria);
-      chart2d.data.datasets[0].data = dados.map(r=>r.valor);
-      chart2d.update();
-      document.getElementById("tituloDash").innerText = "Dashboard " + tipoAtual.charAt(0).toUpperCase()+tipoAtual.slice(1);
+      categorias.forEach((cat, idx)=>{
+        let valores = [];
+        for(let i=0; i<corpo.rows.length; i++){
+          const input = corpo.rows[i].querySelector(`input[data-coluna='${cat}']`);
+          valores.push(parseFloat(input.value) || 0);
+        }
+        graficoLinha.data.datasets[idx].data = valores;
+        graficoBarra.data.datasets[idx].data = valores;
+        graficoPizza.data.datasets[0].data[idx] = valores.reduce((a,b)=>a+b,0);
+      });
+      graficoLinha.update();
+      graficoBarra.update();
+      graficoPizza.update();
     }
 
-    // Formulário
-    document.getElementById("dataForm").addEventListener("submit", (e)=>{
-      e.preventDefault();
-      tipoAtual = document.getElementById("tipo").value;
-      const categoria = document.getElementById("categoria").value;
-      const valor = parseFloat(document.getElementById("valor").value);
-
-      registros[tipoAtual].push({ categoria, valor });
-      localStorage.setItem("dash3D_multi", JSON.stringify(registros));
-
-      atualizarGraficos();
-      e.target.reset();
-    });
-
-    document.getElementById("tipo").addEventListener("change",(e)=>{
-      tipoAtual = e.target.value;
-      atualizarGraficos();
-    });
+    function getCor(){
+      const cores = ["#8e24aa","#d81b60","#ffb74d","#29b6f6","#43a047","#f44336","#3f51b5"];
+      return cores[(graficoLinha.data.datasets.length) % cores.length];
+    }
 
     // Exportar CSV
     function exportarCSV(){
-      const dados = registros[tipoAtual];
-      if(dados.length===0){ alert("Nenhum dado para exportar."); return; }
-      let csv = "Categoria,Valor\n";
-      dados.forEach(r=>{ csv+=`${r.categoria},${r.valor}\n`; });
-      const blob = new Blob([csv],{type:"text/csv"});
+      let csv = "Mês,"+categorias.join(",")+"\n";
+      for(let i=0; i<corpo.rows.length; i++){
+        let linha = corpo.rows[i].cells[0].innerText;
+        categorias.forEach(cat=>{
+          const input = corpo.rows[i].querySelector(`input[data-coluna='${cat}']`);
+          linha += ","+(parseFloat(input.value)||0);
+        });
+        csv += linha+"\n";
+      }
+      const blob = new Blob([csv], {type:"text/csv"});
       const link = document.createElement("a");
       link.href = URL.createObjectURL(blob);
-      link.download = `dashboard_${tipoAtual}.csv`;
+      link.download = "planilha_inteligente.csv";
       link.click();
     }
 
-    // Limpar
-    function limparDados(){
-      if(confirm("Deseja limpar este dashboard?")){
-        registros[tipoAtual] = [];
-        localStorage.setItem("dash3D_multi", JSON.stringify(registros));
-        atualizarGraficos();
-      }
-    }
+    // Exportar PDF
+    async function exportarPDF(){
+      const { jsPDF } = window.jspdf;
+      const doc = new jsPDF();
+      doc.setFontSize(16);
+      doc.text("📊 Relatório - Planilha Inteligente", 20, 20);
 
-    atualizarGraficos();
+      let y = 40;
+      for(let i=0; i<corpo.rows.length; i++){
+        let linha = corpo.rows[i].cells[0].innerText;
+        categorias.forEach(cat=>{
+          const input = corpo.rows[i].querySelector(`input[data-coluna='${cat}']`);
+          linha += " | " + (parseFloat(input.value)||0);
+        });
+        doc.text(linha, 20, y);
+        y+=10;
+      }
+
+      doc.save("planilha_inteligente.pdf");
+    }
   </script>
 </body>
 </html>
