--- a/delivery.html
+++ b/delivery.html
@@ -10,18 +10,56 @@
   <style>
     body { font-family:'Poppins',sans-serif; background:#0f0f0f; color:#fff; margin:0; }
     header { background:linear-gradient(90deg,#6a1b9a,#8e24aa,#d81b60); padding:20px; text-align:center; font-size:22px; font-weight:600; }
-    main { max-width:1400px; margin:auto; padding:20px; }
-    .sheet { background:#1e1e2f; padding:10px; border-radius:12px; box-shadow:0 4px 10px rgba(0,0,0,.4); overflow:auto; }
+
+    /* Layout principal */
+    main {
+      display: grid;
+      grid-template-columns: 1fr 1fr; /* Planilha | Gráficos */
+      gap: 20px;
+      padding: 20px;
+      max-width: 1400px;
+      margin: auto;
+    }
+
+    .controls { grid-column: 1 / -1; display:flex; gap:10px; flex-wrap:wrap; margin-bottom:10px; }
+    button { padding:10px; border-radius:6px; border:none; font-size:14px; background:#8e24aa; color:#fff; cursor:pointer; }
+    button:hover { background:#d81b60; }
+
+    /* Planilha */
+    .sheet {
+      background: #1e1e2f;
+      padding: 10px;
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0,0,0,.4);
+      overflow: auto;
+      max-height: 500px; /* Planilha rola sem empurrar gráficos */
+    }
     table { border-collapse:collapse; min-width:100%; }
     th, td { border:1px solid #444; padding:6px; text-align:center; min-width:80px; }
     th { background:#2c2c3c; color:#fff; position:sticky; top:0; z-index:2; }
     .rowHeader { background:#2c2c3c; color:#fff; position:sticky; left:0; z-index:1; }
     td[contenteditable="true"] { background:#1e1e2f; outline:none; }
-    .controls { margin:15px 0; display:flex; gap:10px; flex-wrap:wrap; }
-    button { padding:10px; border-radius:6px; border:none; font-size:14px; background:#8e24aa; color:#fff; cursor:pointer; }
-    button:hover { background:#d81b60; }
-    .dashboards { display:grid; grid-template-columns:1fr 1fr; gap:20px; margin-top:20px; }
-    canvas { background:#121212; border-radius:12px; padding:10px; }
+
+    /* Dashboards */
+    .dashboards {
+      display: grid;
+      grid-template-rows: repeat(3, 1fr);
+      gap: 20px;
+    }
+    .dashboards canvas {
+      background: #121212;
+      border-radius: 12px;
+      padding: 10px;
+      width: 100% !important;
+      height: 100% !important;
+    }
+
+    /* Responsividade */
+    @media(max-width: 900px) {
+      main { grid-template-columns: 1fr; }
+      .controls { justify-content:center; }
+      .dashboards { grid-template-columns: 1fr; grid-template-rows: auto; }
+    }
   </style>
 </head>
 <body>
@@ -46,8 +84,7 @@
           </tr>
         </thead>
         <tbody id="corpo">
-          <!-- Linhas numeradas -->
-          <tr><td class="rowHeader">1</td><td contenteditable="true">Categoria</td><td contenteditable="true">Categoria 2</td><td contenteditable="true">Categoria 3</td></tr>
+          <tr><td class="rowHeader">1</td><td contenteditable="true">Categoria</td><td contenteditable="true">Telefone</td><td contenteditable="true">Endereço</td></tr>
           <tr><td class="rowHeader">2</td><td contenteditable="true">10</td><td contenteditable="true">20</td><td contenteditable="true">30</td></tr>
           <tr><td class="rowHeader">3</td><td contenteditable="true">15</td><td contenteditable="true">25</td><td contenteditable="true">40</td></tr>
         </tbody>
@@ -76,13 +113,12 @@
     let graficoBarra=new Chart(ctxBarra,{type:'bar',data:{labels:[],datasets:[]},options:{plugins:{legend:{labels:{color:"white"}}},scales:{x:{ticks:{color:"white"}},y:{ticks:{color:"white"}}}}});
     let graficoPizza=new Chart(ctxPizza,{type:'pie',data:{labels:[],datasets:[{data:[],backgroundColor:[]}]},options:{plugins:{legend:{labels:{color:"white"}}}}});
 
-    // Atualizar dashboards
     function atualizarGraficos(){
       const rows=Array.from(corpo.rows);
       if(rows.length<2) return;
 
       const categorias=Array.from(rows[0].cells).slice(1).map(c=>c.innerText.trim());
-      const valores=Array.from(rows.slice(1)).map(r=>Array.from(r.cells).slice(1).map(c=>parseFloat(c.innerText)||0));
+      const valores=rows.slice(1).map(r=>Array.from(r.cells).slice(1).map(c=>parseFloat(c.innerText)||0));
 
       const soma=categorias.map((_,colIdx)=>valores.reduce((acc,row)=>acc+(row[colIdx]||0),0));
 
@@ -108,71 +144,56 @@
       graficoLinha.update(); graficoBarra.update(); graficoPizza.update();
     }
 
-    // Adicionar linha
     function adicionarLinha(){
       const rowCount=corpo.rows.length+1;
       const tr=document.createElement("tr");
       const tdHeader=document.createElement("td");
       tdHeader.className="rowHeader"; tdHeader.innerText=rowCount;
       tr.appendChild(tdHeader);
-
       for(let i=1;i<cabecalho.cells.length;i++){
-        const td=document.createElement("td");
-        td.contentEditable="true";
+        const td=document.createElement("td"); td.contentEditable="true";
         tr.appendChild(td);
       }
       corpo.appendChild(tr);
     }
 
-    // Adicionar coluna
     function adicionarColuna(){
       const colCount=cabecalho.cells.length;
       const th=document.createElement("th");
       th.innerText=String.fromCharCode(64+colCount);
       cabecalho.appendChild(th);
-
       for(let i=0;i<corpo.rows.length;i++){
-        const td=document.createElement("td");
-        td.contentEditable="true";
+        const td=document.createElement("td"); td.contentEditable="true";
         corpo.rows[i].appendChild(td);
       }
     }
 
     function getCor(i){const cores=["#8e24aa","#d81b60","#ffb74d","#29b6f6","#43a047","#f44336","#3f51b5"]; return cores[i%cores.length];}
 
-    // Exportar CSV
     function exportarCSV(){
       let csv="";
       for(let r of tabela.rows){
-        let linha=Array.from(r.cells).map(c=>c.innerText.replace("✖","").trim()).join(",");
+        let linha=Array.from(r.cells).map(c=>c.innerText.trim()).join(",");
         csv+=linha+"\n";
       }
       const blob=new Blob([csv],{type:"text/csv"});
-      const link=document.createElement("a");
-      link.href=URL.createObjectURL(blob);
-      link.download="planilha_inteligente.csv";
-      link.click();
+      const link=document.createElement("a"); link.href=URL.createObjectURL(blob);
+      link.download="planilha_inteligente.csv"; link.click();
     }
 
-    // Exportar PDF
     async function exportarPDF(){
       const {jsPDF}=window.jspdf;
-      const doc=new jsPDF();
-      doc.setFontSize(16);
+      const doc=new jsPDF(); doc.setFontSize(16);
       doc.text("📊 Relatório - Planilha Inteligente",20,20);
-
       let y=40;
       for(let r of corpo.rows){
         let linha=Array.from(r.cells).map(c=>c.innerText).join(" | ");
-        doc.text(linha,20,y);
-        y+=10;
+        doc.text(linha,20,y); y+=10;
       }
       doc.save("planilha_inteligente.pdf");
     }
 
-    // Eventos para atualizar dashboards em tempo real
     tabela.addEventListener("input",atualizarGraficos);
-
     atualizarGraficos();
   </script>
 </body>
